<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="#FFF"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/rl_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >
            <!--<ImageView-->
            <!--android:id="@+id/home_image"-->
            <!--android:layout_width="42dp"-->
            <!--android:layout_height="42dp"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@mipmap/bottom_01" />-->
            <ImageView
                android:id="@+id/img_home_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bottom_01" />

            <TextView
                android:id="@+id/mtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_new_text"
                android:visibility="gone"
                android:textColor="#444444"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_sort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="0dp"
                android:id="@+id/img_sort_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bottom_17" />

            <TextView
                android:id="@+id/tv_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_baoliao_text"
                android:textColor="#444444"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

                <com.bbk.view.NumImageView
                    android:layout_marginTop="2dp"
                    android:id="@+id/img_message_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bottom_13" />


            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_news_text"

                android:textColor="#444444"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="2dp"
                android:id="@+id/img_car_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bottom_18" />

            <TextView
                android:id="@+id/tv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_faxian_text"
                android:textColor="#444444"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_my"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/img_user_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bottom_15" />

            <TextView
                android:id="@+id/tv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_my_text"
                android:textColor="#444444"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>
    
    <View
        android:id="@+id/view_gray"
        android:layout_above="@id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#DCDCDC" />

    <com.bbk.view.CustomViewPager
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_gray" />
	<ImageView 
	    android:id="@+id/mzhezhao"
	    android:visibility="gone"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:scaleType="centerCrop" />
    <ImageView
        android:id="@+id/new_gudie_image_home"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />
    <com.bbk.view.DraggableFlagView
        android:id="@+id/draggableflagview"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@+id/view"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:visibility="gone"
        />
    <View
        android:id="@+id/view"
        android:layout_width="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="1dp"
        android:layout_centerVertical="true"/>
</RelativeLayout>